// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependencyGraph addModule when add new modules should match snapshots 1`] = `
[
  "src/screens/index.ts",
  "root/screens.ts",
  "src/navigators/RootStack.tsx",
  "root/entry.ts",
  "src/navigators/index.ts",
  "index.js",
  "src/App.tsx",
]
`;

exports[`DependencyGraph dependenciesOf should match snapshot 1`] = `
[
  "node_modules/react/jsx-runtime.js",
  "node_modules/react/index.js",
  "node_modules/react-native/index.js",
  "node_modules/react-native-safe-area-context/src/index.tsx",
  "node_modules/dripsy/src/index.ts",
  "src/components/index.ts",
  "src/assets/logo.svg",
]
`;

exports[`DependencyGraph dependentsOf should match snapshot 1`] = `
[
  "src/screens/index.ts",
]
`;

exports[`DependencyGraph inverseDependenciesOf should match snapshot 1`] = `
[
  "src/screens/index.ts",
  "src/navigators/RootStack.tsx",
  "src/navigators/index.ts",
  "src/App.tsx",
  "index.js",
]
`;

exports[`DependencyGraph removeModule should match snapshot 1`] = `
[
  "root/screens.ts",
  "root/entry.ts",
  "index.js",
]
`;
